--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -164,7 +164,7 @@
 
 <!-- BILL ADDRESS ADD modal -->
 @if (addBill){
-  <div id="add-bill-modal" [ngClass]="addBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-fit lg:h-[calc(100%-1rem)] max-h-full shadow-2xl">
+  <div id="add-bill-modal" [ngClass]="addBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-fit lg:h-[calc(100%)] max-h-full shadow-2xl">
       <div class="w-4/5 lg:w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
           <!-- Modal header -->
           <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
