--- a/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
@@ -337,7 +337,7 @@
     <error-message class="fixed w-fit top-1/2 left-1/2 z-50" [message]="errorMessage"></error-message>
 }
 @if(showEditMedium){
-<div id="edit-medium-modal" [ngClass]="showEditMedium ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-40 justify-center items-center w-full md:inset-0 h-fit lg:h-[calc(100%-1rem)] max-h-full shadow-2xl">
+<div id="edit-medium-modal" [ngClass]="showEditMedium ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-40 justify-center items-center w-full md:inset-0 h-fit lg:h-[calc(100%)] max-h-full shadow-2xl">
     <div class="w-4/5 lg:w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
         <!-- Modal header -->
         <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
