--- a/src/app/pages/user-profile/profile-sections/user-info/user-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/user-info/user-info.component.html
@@ -98,5 +98,5 @@
     </div>
 }
 @if(showError){
-    <error-message class="fixed w-fit top-1/2 left-1/2 z-50" [message]="errorMessage"></error-message>
+    <error-message class="flex justify-center items-center fixed w-fit top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50" [message]="errorMessage"></error-message>
 }
