--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -244,5 +244,5 @@
   <cart-card [productOff]="productOff" [prodSpec]="prodSpec" [images]="images" [cartSelection]="cartSelection"></cart-card>
 }
 @if(showError){
-  <error-message class="fixed w-fit top-1/2 left-1/2 z-50" [message]="errorMessage"></error-message>
+  <error-message class="flex justify-center items-center fixed w-fit top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50" [message]="errorMessage"></error-message>
 }
