FIX Ticket#83488 - setting min height to textareas

--- a/src/app/pages/admin/verification/verification.component.html
+++ b/src/app/pages/admin/verification/verification.component.html
@@ -38,7 +38,7 @@
                             class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
     
                     <label for="vc" class="font-bold text-lg dark:text-white">{{ 'ADMIN._vc' | translate }}</label>
-                    <textarea formControlName="vc" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add credential..." ></textarea>
+                    <textarea formControlName="vc" rows="8" class="block w-full min-h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add credential..." ></textarea>
                 </form>
 
                 <div class="flex w-full justify-items-end justify-end ml-4">
