--- a/src/app/pages/contact-us/contact-us-form.component.html
+++ b/src/app/pages/contact-us/contact-us-form.component.html
@@ -48,7 +48,7 @@
         </div>
         <div>
             <label for="organization" class="font-bold text-lg dark:text-white">Message</label>
-            <textarea id="editor" formControlName="message" rows="8" class="block w-full rounded-lg mb-4 px-2 text-sm text-gray-800 dark:text-gray-200 border border-gray-300 dark:border-secondary-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
+            <textarea id="editor" formControlName="message" rows="8" class="block w-full min-h-fit rounded-lg mb-4 px-2 text-sm text-gray-800 dark:text-gray-200 border border-gray-300 dark:border-secondary-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
         </div>
         <a type="submit" href="mailto:info@dome-marketplace.eu?body={{contactForm.value.message}}" class="py-2 px-3 text-sm font-medium text-center text-white bg-primary-100 hover:bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-primary-50">
             Submit
