--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -241,7 +241,7 @@
                                     <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="description"></markdown>
                                 
                             }@else{
-                                <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
+                                <textarea id="editor" formControlName="description" rows="8" class="block w-full min-h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
                             }
                             @if(showEmoji){
                                 <emoji-mart (click)="$event.stopPropagation();" [darkMode]="false" [style]="{ position: 'relative', left: '200px', top: '-500px' }" (emojiClick)="addEmoji($event)"></emoji-mart>
@@ -792,7 +792,7 @@
                                                 <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="licenseDescription"></markdown>
                                             
                                         }@else{
-                                            <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
+                                            <textarea id="editor" formControlName="description" rows="8" class="block w-full min-h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
                                         }
                                         @if(showEmoji){
                                             <emoji-mart (click)="$event.stopPropagation();" [darkMode]="false" [style]="{ position: 'relative', left: '200px', top: '-500px' }" (emojiClick)="addEmoji($event)"></emoji-mart>
@@ -1210,7 +1210,7 @@
                                                 <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
                                             
                                         }@else{
-                                            <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
+                                            <textarea id="editor" formControlName="description" rows="8" class="block w-full min-h-fit px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
                                         }
                                         @if(showEmoji){
                                             <emoji-mart (click)="$event.stopPropagation();" [darkMode]="false" [style]="{ position: 'relative', left: '200px', top: '-500px' }" (emojiClick)="addEmoji($event)"></emoji-mart>
@@ -1263,7 +1263,7 @@
                                         </div>
 
                                         <label for="description" class="font-bold text-lg col-span-2 dark:text-white">{{ 'CREATE_OFFER._description' | translate }}</label>
-                                        <textarea id="description" formControlName="description" rows="4" class="col-span-2 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
+                                        <textarea id="description" formControlName="description" rows="4" class="col-span-2 block min-h-fit p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
                                 
                                     </div>
                                 } @else if(discountSelected){
@@ -1304,7 +1304,7 @@
                                                 class="bg-gray-50 border-r border-gray-300 text-gray-900 text-sm dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
                                             </div>
                                             <label for="description" class="font-bold text-lg col-span-2 dark:text-white">{{ 'CREATE_OFFER._description' | translate }}</label>
-                                            <textarea id="description" formControlName="description" rows="4" class="col-span-2 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>    
+                                            <textarea id="description" formControlName="description" rows="4" class="col-span-2 min-h-fit block p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>    
                                         </div>                                    
                                     </div>
                                 }
@@ -1663,7 +1663,7 @@
                 </div>
                 <label for="description" class="font-bold text-lg col-span-2 dark:text-white">{{ 'UPDATE_OFFER._description' | translate }}</label>
                 @if(!customSelected){
-                    <textarea id="description" formControlName="description" rows="4" class="col-span-2 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
+                    <textarea id="description" formControlName="description" rows="4" class="col-span-2 block p-2.5 w-full min-h-fit text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
                 
                 } @else {
                     <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-secondary-200 dark:border-secondary-200 col-span-2">
@@ -1751,7 +1751,7 @@
                                     <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
                                 
                             }@else{
-                                <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
+                                <textarea id="editor" formControlName="description" rows="8" class="block w-full min-h-fit px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
                             }
                             @if(showEmoji){
                                 <emoji-mart (click)="$event.stopPropagation();" [darkMode]="false" [style]="{ position: 'relative', left: '200px', top: '-500px' }" (emojiClick)="addEmoji($event)"></emoji-mart>
