--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,18 +1,29 @@
 <footer class="fixed bottom-0 left-0 z-10 h-[25px] w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-end md:p-6 dark:bg-gray-800 dark:border-gray-600">
   <!--<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">2024 <a href="https://flowbite.com/" class="hover:underline">DOME</a>.
   </span>-->
-  <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-    <li>
-      <a href="../assets/documents/privacy.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
-    </li>
-    <li>
-      <a href="../assets/documents/cookies.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._cookies' | translate }}</a>
-    </li>
-    <li>
-      <a href="../assets/documents/terms.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
-    </li>
-    <li>
-      <a (click)="goTo('/contact-us')" target="_blank" class="hover:underline cursor-pointer">{{ 'FOOTER._contact' | translate }}</a>
-    </li>
-  </ul>
+  <div class="flex justify-between items-center w-full">
+    <!-- Social Links -->
+    <div class="flex justify-start text-gray-500 dark:text-gray-400">
+      <fa-icon (click)="open(DOME_LINKEDIN)" class="p-2 cursor-pointer" [icon]="faLinkedin"></fa-icon>
+      <fa-icon (click)="open(DOME_X)" class="p-2 cursor-pointer" [icon]="faXTwitter"></fa-icon>
+      <fa-icon (click)="open(DOME_YOUTUBE)" class="p-2 cursor-pointer" [icon]="faYoutube"></fa-icon>
+    </div>
+
+    <!-- Footer Links -->
+    <ul class="flex flex-wrap items-center text-sm font-medium text-gray-500 dark:text-gray-400">  
+      <li>
+        <a href="../assets/documents/privacy.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
+      </li>
+      <li>
+        <a href="../assets/documents/cookies.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._cookies' | translate }}</a>
+      </li>
+      <li>
+        <a href="../assets/documents/terms.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
+      </li>
+      <li>
+        <a (click)="goTo('/contact-us')" target="_blank" class="hover:underline cursor-pointer">{{ 'FOOTER._contact' | translate }}</a>
+      </li>
+    </ul>
+  </div>
+
 </footer>
