FIX icons margins

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,9 +4,9 @@
   <div class="flex justify-between items-center w-full">
     <!-- Social Links -->
     <div class="flex justify-start text-gray-500 dark:text-gray-400">
-      <fa-icon (click)="open(DOME_LINKEDIN)" class="p-2 cursor-pointer" [icon]="faLinkedin"></fa-icon>
-      <fa-icon (click)="open(DOME_X)" class="p-2 cursor-pointer" [icon]="faXTwitter"></fa-icon>
-      <fa-icon (click)="open(DOME_YOUTUBE)" class="p-2 cursor-pointer" [icon]="faYoutube"></fa-icon>
+      <fa-icon (click)="open(DOME_LINKEDIN)" class="mr-4 cursor-pointer" [icon]="faLinkedin"></fa-icon>
+      <fa-icon (click)="open(DOME_X)" class="mr-4 cursor-pointer" [icon]="faXTwitter"></fa-icon>
+      <fa-icon (click)="open(DOME_YOUTUBE)" class="cursor-pointer" [icon]="faYoutube"></fa-icon>
     </div>
 
     <!-- Footer Links -->
