--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -1050,8 +1050,11 @@
                         </button>
                     </div>
                 }
-                @if(showCreatePrice||editPrice){
-                    <new-price-plan [selectedProdSpec]=selectedProdSpec [priceToUpdate]="priceToUpdate"></new-price-plan>
+                @if(showCreatePrice){
+                    <new-price-plan [selectedProdSpec]=selectedProdSpec></new-price-plan>
+                }
+                @if(editPrice){
+                    <update-price-plan [selectedProdSpec]=selectedProdSpec [priceToUpdate]=priceToUpdate></update-price-plan>
                 }
                 <div class="flex w-full justify-items-end justify-end m-4">
                     <button type="button" (click)="toggleReplication();" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
