--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
@@ -292,11 +292,8 @@
       </div>
 }
 
-@if(editPrice){
-    <label class="font-bold text-xl ml-4 dark:text-white">Edit price plan</label>
-}@else{
-    <label class="font-bold text-xl ml-4 dark:text-white">{{ 'CREATE_OFFER._new_price' | translate }}</label>
-}                    
+
+<label class="font-bold text-xl ml-4 dark:text-white">Edit price plan</label>                 
 <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <form class="m-4" [formGroup]="priceForm" >
         <label class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._name' | translate }}</label>
@@ -411,7 +408,7 @@
                 </div>
             </div>
             <div class="flex items-center mb-4">
-                <input id="default-checkbox" (change)="isDomeManaged=!isDomeManaged" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                <input id="default-checkbox" [checked]="isDomeManaged" (change)="isDomeManaged=!isDomeManaged" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                 <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is this price DOME managed?</label>
             </div>
             @if(isDomeManaged){
